--- a/challenge/test_challenge.ipynb
+++ b/challenge/test_challenge.ipynb
@@ -32,9 +32,49 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mRunning cells with 'Python 3.10.7 64-bit' requires ipykernel package.\n",
+      "\u001b[1;31mRun the following command to install 'ipykernel' into the Python environment. \n",
+      "\u001b[1;31mCommand: '/bin/python3 -m pip install ipykernel -U --user --force-reinstall'"
+     ]
+    }
+   ],
    "source": [
-    "\n"
+    "\n",
+    "def romanToInt(s):\n",
+    "    \n",
+    "    obj={\n",
+    "        \"I\":1,\n",
+    "        \"V\":5,\n",
+    "        \"X\":10,\n",
+    "        \"L\":50,\n",
+    "        \"C\":100,\n",
+    "        \"D\":500,\n",
+    "        \"M\":1000\n",
+    "    }\n",
+    "    sum=0\n",
+    "    skip=False\n",
+    "    for i in range(len(s)):\n",
+    "        if skip:\n",
+    "            skip=False\n",
+    "            continue\n",
+    "        if i<len(s)-1:\n",
+    "            if obj[s[i+1]]>obj[s[i]]:\n",
+    "                sum=sum+obj[s[i+1]]-obj[s[i]]\n",
+    "                skip=True\n",
+    "\n",
+    "            else:\n",
+    "                sum=sum+obj[s[i]]\n",
+    "    if obj[s[len(s)-1]]<=obj[s[len(s)-2]]:            \n",
+    "        sum+=obj[s[len(s)-1]]\n",
+    "\n",
+    "    return sum\n",
+    "             "
    ]
   },
   {
@@ -48,7 +88,18 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mRunning cells with 'Python 3.9.5 64-bit ('3.9.5')' requires ipykernel package.\n",
+      "\u001b[1;31mRun the following command to install 'ipykernel' into the Python environment. \n",
+      "\u001b[1;31mCommand: '/home/islam/.pyenv/versions/3.9.5/bin/python -m pip install ipykernel -U --force-reinstall'"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "assert  58  ==  romanToInt(\"LVIII\")\n",
@@ -60,13 +111,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Big(O):"
+    "##### Big(O): "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "time complexity :O(n)\n",
+    "\n",
+    "space complexity :O(1)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -89,8 +144,28 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mRunning cells with 'Python 3.10.7 64-bit' requires ipykernel package.\n",
+      "\u001b[1;31mRun the following command to install 'ipykernel' into the Python environment. \n",
+      "\u001b[1;31mCommand: '/bin/python3 -m pip install ipykernel -U --user --force-reinstall'"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "def singleNumber( nums):\n",
+    "    num=0\n",
+    "    for i in range(0,len(nums)):\n",
+    "        num=nums.count(nums[i])\n",
+    "\n",
+    "        if num==1:\n",
+    "            return nums[i]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -121,7 +196,11 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "time complexity :O(n)\n",
+    "\n",
+    "space complexity :O(1)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -145,7 +224,23 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\n",
+    "def moveZeroes(nums):\n",
+    "    pos = 0\n",
+    "    counter=0\n",
+    "    while True:\n",
+    "        if pos == len(nums):\n",
+    "            break\n",
+    "        if nums[pos] == 0:\n",
+    "            nums.pop(pos)\n",
+    "            counter+=1\n",
+    "            continue\n",
+    "        pos+=1\n",
+    "    for i in range(counter):\n",
+    "        nums.append(0)\n",
+    "    return nums"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -169,13 +264,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Big(O):"
+    "##### Big(O): "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "time complexity :O(n)\n",
+    "\n",
+    "space complexity :O(n)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -199,7 +298,27 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\n",
+    "def longestCommonPrefix( strs):\n",
+    "    chr=\"\"\n",
+    "    a=1\n",
+    "\n",
+    "\n",
+    "    if strs!=[\"\"]  :      \n",
+    "        a= len(min(strs, key=len))\n",
+    "        \n",
+    "        for i in range(a):\n",
+    "            str={ x[i] for x in strs}\n",
+    "            \n",
+    "            if len(str)==1:\n",
+    "                chr=chr+list(str)[0]\n",
+    "            else:\n",
+    "                break\n",
+    "    \n",
+    "\n",
+    "    return chr"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -229,12 +348,16 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "time complexity :O(n)\n",
+    "\n",
+    "space complexity :O(1)"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.5 64-bit ('3.9.5')",
+   "display_name": "Python 3.10.7 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -248,12 +371,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.10.7"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "e463d4507d294650ecd3dcb45b8d0e22945e7617ed47139de19af981b9edd7d0"
+    "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
    }
   }
  },
